--- a/public/html/agenciainfo.html
+++ b/public/html/agenciainfo.html
@@ -2,18 +2,32 @@
 <html lang="es">
 
 <head>
-<title> Pagina de colectivos - Provincias </title>
+<title> Pagina de colectivos - Info Agencia </title>
 <link rel="stylesheet" type="text/css" href="indexdisenio.css">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 
 </head>
-
 <body class="bg-info">
 
 <header class="w-100 mw-100">
 <div class="row justify-content-between">
-	<div class="col-8 col-sm-10 col-lg-10 col-md-10 align-self-start">
+	<div class="col-1 align-self-start">
 		<img src="logoejemplo.png" width=50px;>
+	</div>
+	<div class="col-1 pt-2">
+		<a class="text-dark" href="index.html">Buenos Aires</a>
+	</div>
+	<div class="col-1 pt-2">
+		<p class="text-dark">></p>
+	</div>
+	<div class="col-1 pt-2">
+		<a class="text-dark" href="agencias.html">Agencia</a>
+	</div>
+	<div class="col-1 pt-2">
+		<p class="text-dark">></p>
+	</div>
+	<div class="col-6 pt-2">
+		<a class="text-dark" href="#>Agencia Info</a>
 	</div>
 	<div class="col align-self-end justify-content-center">
 
@@ -31,29 +45,34 @@
 	</div>
 </div>
 </header>
-<div class="row ms-3 position-relative top-40 start-40">
-<p class="pt-4 fw-bold">Lista de provincias de Argentina</p>
 <div class="row">
-	<div class="col bg-secondary rounded-top">
-		<p class="text-center fw-bold">En esta lista tenemos registrado las provincias de las cuales tenemos registros de las lineas que operan en ellas</p>
-		<div class="row bg-light justify-content-start pb-4">
-			<div class="col py-4">
-			<ul>
-				<li class="bg-secondary badge text-wrap rounded fw-bold"><a class="text-decoration-none fw-bold text-dark" href="agencias.html">Buenos Aires</a></li>
-			</ul>
-			</div>
-		<div class="row">
-			<div class="col">
-			<ul>
-				<li class="bg-secondary badge text-wrap rounded fw-bold"> <a class="text-decoration-none fw-bold text-dark" href="#">MAS PROXIMAMENTE</a></li>
-			</ul>
+<p class="ms-5 pt-2 text-dark fw-bold">Nombre de Agencia</p>
+<div class="col-1 bg-light w-75 ms-5 border border-dark p-2">
+	Info de la Agencia
+</div>
+</div>
+<div class="row">
+	<div class="col">
+		<p class="fw-bold text-center pt-2">Listas de lineas en la ciudad</p>
+		<div class="bg-light border border-dark ms-5">
+			<p class="text-center"> aca iran las lineas que tiene esta agencia </p>
 		</div>
+	</div>
+	<div class="col">
+		<p class="fw-bold text-center pt-2">Area de cobertura de la agencia</p>
+		<div class="bg-light border border-dark ms-5">
+			<p class="text-center"> aca ira el mapa (solo la provincia a la que le hace cobertura)</p>
 		</div>
+		<p class="fw-bold text-center pt-2">Datos de la agencia</p>
+		<div class="bg-light border border-dark ms-5">
+			<p class="text-center">Datos de la agencia iran aca</p>
+		</div>
+		<p class="fw-bold text-center pt-2">Informacion de contacto de la agencia</p>
+		<div class="bg-light border border-dark ms-5">
+			<p class="text-center">Contacto de la agencia</p>
 		</div>
 	</div>
 </div>
-</div>
-
 <footer class="position-absolute fixed-bottom w-100">
 	<div class="row">
 		<div class="col ms-5 pt-3">
