--- a/public/html/agencias.html
+++ b/public/html/agencias.html
@@ -2,18 +2,20 @@
 <html lang="es">
 
 <head>
-<title> Pagina de colectivos - Provincias </title>
+<title> Pagina de colectivos - Agencias </title>
 <link rel="stylesheet" type="text/css" href="indexdisenio.css">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 
 </head>
-
 <body class="bg-info">
 
 <header class="w-100 mw-100">
 <div class="row justify-content-between">
-	<div class="col-8 col-sm-10 col-lg-10 col-md-10 align-self-start">
+	<div class="col-2 align-self-start">
 		<img src="logoejemplo.png" width=50px;>
+	</div>
+	<div class="col-8 pt-2">
+		<a class="text-dark" href="index.html">Buenos Aires</a>
 	</div>
 	<div class="col align-self-end justify-content-center">
 
@@ -31,28 +33,16 @@
 	</div>
 </div>
 </header>
-<div class="row ms-3 position-relative top-40 start-40">
-<p class="pt-4 fw-bold">Lista de provincias de Argentina</p>
+<p class="fw-bold text-center p-4">Lista de Agencias</p>
+<section class="bg-light rounded w-75 position-relative start-50 translate-middle">
 <div class="row">
-	<div class="col bg-secondary rounded-top">
-		<p class="text-center fw-bold">En esta lista tenemos registrado las provincias de las cuales tenemos registros de las lineas que operan en ellas</p>
-		<div class="row bg-light justify-content-start pb-4">
-			<div class="col py-4">
-			<ul>
-				<li class="bg-secondary badge text-wrap rounded fw-bold"><a class="text-decoration-none fw-bold text-dark" href="agencias.html">Buenos Aires</a></li>
-			</ul>
-			</div>
-		<div class="row">
-			<div class="col">
-			<ul>
-				<li class="bg-secondary badge text-wrap rounded fw-bold"> <a class="text-decoration-none fw-bold text-dark" href="#">MAS PROXIMAMENTE</a></li>
-			</ul>
-		</div>
-		</div>
-		</div>
+	<div class="col">
+		<ul>
+			<li class="bg-secondary badge text-wrap rounded fw-bold"><a class="text-decoration-none fw-bold text-dark" href="#">DOTA</a></li>
+		</ul>
 	</div>
 </div>
-</div>
+</section>
 
 <footer class="position-absolute fixed-bottom w-100">
 	<div class="row">
