--- a/public/html/infolinea.html
+++ b/public/html/infolinea.html
@@ -2,19 +2,40 @@
 <html lang="es">
 
 <head>
-<title> Pagina de colectivos - Provincias </title>
+<title> Pagina de colectivos - Info Agencia </title>
 <link rel="stylesheet" type="text/css" href="indexdisenio.css">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 
 </head>
-
 <body class="bg-info">
 
 <header class="w-100 mw-100">
 <div class="row justify-content-between">
-	<div class="col-8 col-sm-10 col-lg-10 col-md-10 align-self-start">
+	<div class="col-1 align-self-start">
 		<img src="logoejemplo.png" width=50px;>
 	</div>
+	<div class="col-1 pt-2">
+		<a class="text-dark" href="index.html">Buenos Aires</a>
+	</div>
+	<div class="col-1 pt-2">
+		<p class="text-dark">></p>
+	</div>
+	<div class="col-1 pt-2">
+		<a class="text-dark" href="agencias.html">Agencia</a>
+	</div>
+	<div class="col-1 pt-2">
+		<p class="text-dark">></p>
+	</div>
+	<div class="col-1 pt-2">
+		<a class="text-dark" href="agenciainfo.html">Agencia Info</a>
+	</div>
+	<div class="col-1 pt-2">
+		<p class="text-dark">></p>
+	</div>
+	<div class="col-4 pt-2">
+		<a class="text-dark" href="#">Info de linea</a>
+	</div>
+	
 	<div class="col align-self-end justify-content-center">
 
 		<div class="dropdown">
@@ -31,30 +52,67 @@
 	</div>
 </div>
 </header>
-<div class="row ms-3 position-relative top-40 start-40">
-<p class="pt-4 fw-bold">Lista de provincias de Argentina</p>
-<div class="row">
-	<div class="col bg-secondary rounded-top">
-		<p class="text-center fw-bold">En esta lista tenemos registrado las provincias de las cuales tenemos registros de las lineas que operan en ellas</p>
-		<div class="row bg-light justify-content-start pb-4">
-			<div class="col py-4">
-			<ul>
-				<li class="bg-secondary badge text-wrap rounded fw-bold"><a class="text-decoration-none fw-bold text-dark" href="agencias.html">Buenos Aires</a></li>
-			</ul>
-			</div>
-		<div class="row">
-			<div class="col">
-			<ul>
-				<li class="bg-secondary badge text-wrap rounded fw-bold"> <a class="text-decoration-none fw-bold text-dark" href="#">MAS PROXIMAMENTE</a></li>
-			</ul>
-		</div>
-		</div>
-		</div>
-	</div>
+
+<div class="row p-2">
+	<p class="text-dark fw-bold ms-5">Numero de linea</p>
+	<p class="text-dark fw-bold ms-5">Ciudad - Localidad</p>
 </div>
+<div class="row py-2 bg-secondary mh-100">
+	<div class="col pt-2">
+			<div class="mx-2 bg-light border border-dark">
+					<p class=" text-dark border border-dark fw-bold text-center">Linea N° horarios y paradas</p>
+			<p class="text-dark text-left py-2 mx-2">Texto</p>
+			</div>
+			<div class="mx-2 bg-light border border-dark py-2">
+					<p class=" text-dark border border-dark fw-bold text-center">Paradas</p>
+			<p class="text-dark text-left py-2 mx-2">Texto</p>
+			</div>
+
+			<p class=" mx-5 text-dark text-left bg-light border border-dark text-center w-50">Preguntas Frecuentes</p>
+			<ul>
+				<li></li>
+				<li></li>
+			</ul>
+	</div>
+
+		<div class="col pt-2">
+		<div class="mx-2 bg-light border border-dark">
+				<p class=" text-dark border border-dark fw-bold text-center">Recorrido del colectivo</p>
+		<p class="text-dark text-left py-2 mx-2">Mapa</p>
+		</div>
+
+		<div class="mx-2 bg-light border border-dark pt-2">
+				<p class=" text-dark border border-dark fw-bold text-center">Horarios</p>
+				<div class="row">
+				<div class="ms-2 col">
+					<p class="text-dark fw-bold text-left">Dia</p>
+					<ul>
+						<li></li>
+					</ul>
+				</div>
+				<div class="col">
+					<p class="text-dark fw-bold text-right">Horarios de operacion</p>
+					<ul>
+						<li></li>
+					</ul>
+				</div>
+				</div>
+			</div>
+
+		<div class="mx-2 bg-light border border-dark">
+				<p class=" text-dark border border-dark fw-bold text-center">Tarifas de la linea de colectivo</p>
+		<p class="text-dark text-left py-2 mx-2">tarifa</p>
+		</div>
+
+		<div class="mx-2 bg-light border border-dark">
+				<p class=" text-dark border border-dark fw-bold text-center">Orden paradas</p>
+		<p class="text-dark text-left py-2 mx-2">Orden de paradas</p>
+		</div>
+		</div>
+
 </div>
 
-<footer class="position-absolute fixed-bottom w-100">
+<footer class=" w-100">
 	<div class="row">
 		<div class="col ms-5 pt-3">
 			<img src="logoejemplo.png" width=50px;>
