--- a/public/html/agenciainfo.html
+++ b/public/html/agenciainfo.html
@@ -3,7 +3,7 @@
 
 <head>
 <title> Pagina de colectivos - Info Agencia </title>
-<link rel="stylesheet" type="text/css" href="indexdisenio.css">
+<link rel="stylesheet" type="text/css" href="./css/indexdisenio.css">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
    integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
@@ -25,39 +25,25 @@
 	<div class="col col-sm-2 align-self-end pb-2">
 		<a class="text-dark" href="agencias.html">Agencias</a>
 	</div>
-	<div class="col-10 col-sm-2 align-self-end pb-2 me-4">
-		<a class="text-dark text-center" href="agenciainfo.html">Nombre_De_Agencia</a>
+	<div class="col col-sm-2 align-self-end pb-2">
+		<a class="text-dark" href="lineas.html">Lineas</a>
 	</div>
-	<div class="col col-sm-1 ms-4 align-self-end">
-
-		<div class="dropdown">
-		<button class="btn btn-default dropdown-toggle" type="button" id="dropdownidioma" 	data-toggle="dropdown" aria-extended="true">
-			<b>ES</b>
-	 	</button>
-	 	<ul class="dropdown-menu" role="menu" aria-labelledby="dropdownidioma">
-	 			<li class="dropdown-header mx-3">Español</li>
-	 			<li class="mx-5"><a class="text-decoration-none link-dark" href="#">ES</a></li>
-	 			<li class="dropdown-header mx-3">Ingles</li>
-	 			<li class="mx-5"><a class="text-decoration-none link-dark" href="#">EN</a></li>
-	 		</ul>
-		</div>
+	<div id="paginaagencia" class="col-10 col-sm-2 align-self-end pb-2 me-4">
+		
 	</div>
 </div>
 </header>
 
-<div class="pt-4 row mw-100">
-	<p class="text-dark text-center fw-bold">Nombre de Agencia</p>
-</div>
-<div class="row mw-100 justify-content-center">
-<div class="col-1 bg-light w-75 border border-dark p-2">
-	Info de la Agencia
-</div>
+<div id="nombreagencia"class="pt-4 row mw-100">
+
 </div>
 <div class="row mw-100">
 	<div class="col">
 		<p class="fw-bold text-center pt-2">Listas de lineas en la ciudad</p>
 		<div class="bg-light border border-dark ms-5">
-			<p class="text-center"> aca iran las lineas que tiene esta agencia </p>
+			<ul id="agencialineas">
+
+			</ul>
 		</div>
 	</div>
 	<div class="col">
@@ -67,12 +53,12 @@
       </div>
 		</div>
 		<p class="fw-bold text-center pt-2">Datos de la agencia</p>
-		<div class="bg-light border border-dark ms-5">
-			<p class="text-center">Datos de la agencia iran aca</p>
+		<div id="datosdelaagencia" class="bg-light border border-dark ms-5">
+
 		</div>
 		<p class="fw-bold text-center pt-2">Informacion de contacto de la agencia</p>
-		<div class="bg-light border border-dark ms-5">
-			<p class="text-center">Contacto de la agencia</p>
+		<div id="contactodelaagencia" class="bg-light border border-dark ms-5">
+
 		</div>
 	</div>
 </div>
@@ -104,11 +90,11 @@
 
 </footer>
 
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-
-<script src="mapaprovincia.js"></script>
+<script src="./Javascript/jquery-3.6.0.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+<script type="module"src="./Javascript/infodelaagencia.js"></script>
+<script src="./Javascript/mapaprovincia.js"></script>
 
 </body>
 </html>
