--- a/public/html/agencias.html
+++ b/public/html/agencias.html
@@ -3,7 +3,7 @@
 
 <head>
 <title> Pagina de colectivos - Agencias </title>
-<link rel="stylesheet" type="text/css" href="indexdisenio.css">
+<link rel="stylesheet" type="text/css" href="./css/indexdisenio.css">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 
 </head>
@@ -17,35 +17,21 @@
 	<div class="mt-3 sm-mt-0 col-sm-2 align-self-end pb-2">
 		<a class="text-dark" href="index.html">Provincias</a>
 	</div>
-	<div class="col-sm-5 align-self-end pb-2">
+	<div class="col col-sm-2 align-self-end pb-2">
 		<a class="text-dark" href="agencias.html">Agencias</a>
 	</div>
-	<div class="col-1 ms-2 align-self-end">
-
-		<div class="dropdown">
-		<button class="btn btn-default dropdown-toggle" type="button" id="dropdownidioma" 	data-toggle="dropdown" aria-extended="true">
-			<b>ES</b>
-	 	</button>
-	 	<ul class="dropdown-menu" role="menu" aria-labelledby="dropdownidioma">
-	 			<li class="dropdown-header mx-3">Español</li>
-	 			<li class="mx-5"><a class="text-decoration-none link-dark" href="#">ES</a></li>
-	 			<li class="dropdown-header mx-3">Ingles</li>
-	 			<li class="mx-5"><a class="text-decoration-none link-dark" href="#">EN</a></li>
-	 		</ul>
-		</div>
+	<div class="col align-self-end pb-2">
+		<a class="text-dark" href="lineas.html">Lineas</a>
 	</div>
 </div>
 </header>
 
-<p class="fw-bold text-center p-4">Lista de Agencias</p>
-<section class="bg-light rounded w-75 position-relative start-50 translate-middle">
-<div class="row">
-	<div class="col">
-		<ul>
-			<li class="bg-secondary badge text-wrap rounded fw-bold"><a class="text-decoration-none fw-bold text-dark" href="agenciainfo.html">DOTA</a></li>
-		</ul>
-	</div>
-</div>
+<p class="fw-bold text-center pt-3">Lista de agencias</p>
+<section class="bg-light rounded py-4 mx-4">
+	<input class="w-75 mx-auto d-block" type="text" id="inputBuscar" onkeyup="buscarLinea()" placeholder="Buscar lista...">
+	<ul id="listadeagencias">
+		
+	</ul>
 </section>
 
 <footer class="position-absolute w-100 mt-5">
@@ -75,10 +61,33 @@
 	</div>
 
 </footer>
+<script src="./Javascript/jquery-3.6.0.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+<script type="module" src="./Javascript/poneragencias.js"></script>
+<script>
+	var buscarLinea = function() {
+    var input, filter, ul, li, a, i, txtValue;
+    input = document.getElementById('inputBuscar');
+    filter = input.value.toUpperCase();
+	ullineas = document.getElementById("listadeagencias");
+    li = ullineas.getElementsByTagName("li");
 
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    for(let i = 0; i < li.length; i++)
+    {
+        a = li[i].getElementsByTagName("a")[0];
+        txtValue = a.textContent || a.innerText;
+        if(txtValue.toUpperCase().indexOf(filter) > -1)
+        {
+            li[i].style.display = "";
+        }
+        else
+        {
+            li[i].style.display = "none";
+        }
+    }
+}
+</script>
 
 </body>
 
