--- a/public/html/index.html
+++ b/public/html/index.html
@@ -3,7 +3,7 @@
 
 <head>
 <title> Pagina de colectivos - Provincias </title>
-<link rel="stylesheet" type="text/css" href="indexdisenio.css">
+<link rel="stylesheet" type="text/css" href="./css/indexdisenio.css">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 
 </head>
@@ -12,22 +12,11 @@
 
 <header class="position-relative w-100">
 <div class="row mw-100">
-	<div class="col-9 align-self-start">
+	<div class="col-2 align-self-start">
 		<a href="index.html"><img src="logoejemplo.png" width=50px;></a>
 	</div>
-	<div class="col align-self-end">
-
-		<div class="dropdown">
-		<button class="btn btn-default dropdown-toggle" type="button" id="dropdownidioma" 	data-toggle="dropdown" aria-extended="true">
-			<b>ES</b>
-	 	</button>
-	 	<ul class="dropdown-menu" role="menu" aria-labelledby="dropdownidioma">
-	 			<li class="dropdown-header mx-3">Español</li>
-	 			<li class="mx-5"><a class="text-decoration-none link-dark" href="#">ES</a></li>
-	 			<li class="dropdown-header mx-3">Ingles</li>
-	 			<li class="mx-5"><a class="text-decoration-none link-dark" href="#">EN</a></li>
-	 		</ul>
-		</div>
+	<div class="mt-3 sm-mt-0 col-sm-2 align-self-end pb-2">
+		<a class="text-dark" href="#">Provincias</a>
 	</div>
 </div>
 </header>
