--- a/public/html/infolinea.html
+++ b/public/html/infolinea.html
@@ -2,8 +2,9 @@
 <html lang="es">
 
 <head>
+	<meta http-equiv="content-type" content="text/html; charset=utf-8"/>
 <title> Pagina de colectivos - Info Agencia </title>
-<link rel="stylesheet" type="text/css" href="indexdisenio.css">
+<link rel="stylesheet" type="text/css" href="./css/indexdisenio.css">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
    integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
@@ -11,8 +12,6 @@
  <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
    integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
    crossorigin=""></script>
-   <link rel="stylesheet" href="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.css" />
-   <script src="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.js"></script>
 </head>
 <body class="bg-info">
 
@@ -21,55 +20,41 @@
 	<div class="col col-sm-2">
 		<a href="index.html"><img src="logoejemplo.png" width=50px;></a>
 	</div>
-	<div class="mt-3 sm-mt-0 col-sm-2 align-self-end pb-2">
+	<div class="mt-3 sm-mt-0 col-sm-1 align-self-end pb-2">
 		<a class="text-dark" href="index.html">Provincias</a>
 	</div>
-	<div class="col col-sm-2 align-self-end pb-2">
+	<div class="col col-sm-1 align-self-end pb-2">
 		<a class="text-dark" href="agencias.html">Agencias</a>
 	</div>
-	<div class="col col-sm-2 align-self-end pb-2 me-4">
-		<a class="text-dark text-center" href="agenciainfo.html">Nombre_De_Agencia</a>
+	<div class="col col-sm-1 align-self-end pb-2">
+		<a class="text-dark" href="lineas.html">Lineas</a>
 	</div>
-	<div class="col col-sm-2 align-self-end pb-2 ms-4">
-		<a class="text-dark text-center" href="infolinea.html">Linea</a>
+	<div id="nombreagenciaurl" class="col col-sm-1 align-self-end pb-2 me-4">
+		
 	</div>
-	<div class="col-1 ms-2 align-self-end">
-
-		<div class="dropdown">
-		<button class="btn btn-default dropdown-toggle" type="button" id="dropdownidioma" 	data-toggle="dropdown" aria-extended="true">
-			<b>ES</b>
-	 	</button>
-	 	<ul class="dropdown-menu" role="menu" aria-labelledby="dropdownidioma">
-	 			<li class="dropdown-header mx-3">Español</li>
-	 			<li class="mx-5"><a class="text-decoration-none link-dark" href="#">ES</a></li>
-	 			<li class="dropdown-header mx-3">Ingles</li>
-	 			<li class="mx-5"><a class="text-decoration-none link-dark" href="#">EN</a></li>
-	 		</ul>
-		</div>
+	<div id="nombrelineaurl"class="col col-sm-1 align-self-end pb-2 ms-4">
+		
 	</div>
 </div>
 </header>
 
-<div class="row mt-3 mw-100">
-	<p class="ms-2 text-dark fw-bold">Numero de linea</p>
-	<p class="ms-2 text-dark fw-bold">Ciudad - Localidad</p>
+<div id="numeroLinea" class="row mt-3 mw-100">
+	
 </div>
 <div class="row py-2 bg-secondary ms-0 mw-100">
 	<div class="col pt-2">
-			<div class="mx-2 bg-light border border-dark">
-					<p class=" text-dark border border-dark fw-bold text-center">Linea N° horarios y paradas</p>
-			<p class="text-dark text-left py-2 mx-2">Texto</p>
+			<div class="mx-2 bg-light border border-dark ">
+					<div class="titleparadas">
+						<p class=" text-dark border border-dark fw-bold text-center mb-0">Paradas</p>
+					</div>
+					<div class="scrollable">
+						<div class="scrollablecontent">
+							<ul id="listaparadas">
+								
+							</ul>
+						</div>
+					</div>
 			</div>
-			<div class="mx-2 bg-light border border-dark my-2">
-					<p class=" text-dark border border-dark fw-bold text-center">Paradas</p>
-			<p class="text-dark text-left py-2 mx-2">Texto</p>
-			</div>
-
-			<p class=" mx-5 text-dark text-left bg-light border border-dark text-center w-50">Preguntas Frecuentes</p>
-			<ul class="bg-light border border-dark">
-				<li></li>
-				<li></li>
-			</ul>
 	</div>
 
 		<div class="col pt-2">
@@ -79,33 +64,6 @@
         </div>
 		</div>
 
-		<div class="mx-2 bg-light border border-dark my-2">
-				<p class=" text-dark border border-dark fw-bold text-center">Horarios</p>
-				<div class="row">
-				<div class="ms-2 col">
-					<p class="text-dark fw-bold text-left">Dia</p>
-					<ul>
-						<li></li>
-					</ul>
-				</div>
-				<div class="col">
-					<p class="text-dark fw-bold text-right">Horarios de operacion</p>
-					<ul>
-						<li></li>
-					</ul>
-				</div>
-				</div>
-			</div>
-
-		<div class="mx-2 my-2 bg-light border border-dark">
-				<p class=" text-dark border border-dark fw-bold text-center">Tarifas de la linea de colectivo</p>
-		<p class="text-dark text-left py-2 mx-2">tarifa</p>
-		</div>
-
-		<div class="mx-2 bg-light border border-dark">
-				<p class=" text-dark border border-dark fw-bold text-center">Orden paradas</p>
-		<p class="text-dark text-left py-2 mx-2">Orden de paradas</p>
-		</div>
 		</div>
 
 </div>
@@ -137,12 +95,11 @@
 	</div>
 
 </footer>
-
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-<script src="mapalinea.js"></script>
-
+<script src="./Javascript/jquery-3.6.0.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+<script type="module" src="./Javascript/ponerlineas.js"></script>
+<script src="./Javascript/mapalinea.js"></script>
 
 </body>
 
