--- a/public/html/agenciainfo.html
+++ b/public/html/agenciainfo.html
@@ -11,23 +11,41 @@
  <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
    integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
    crossorigin=""></script>
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+
 </head>
 <body style="background-color:#bcc6db;">
 
 	<header class="position-relative w-100">
-		<div  class="row mw-100">
+		<div  class="row mw-100" id="test19">
 			<div class="col col-sm-2">
 				<a href="index.html"><img src="logoejemplo.png" width=50px;></a>
 			</div>
-			<div class="mt-3 sm-mt-0 col-sm-2 align-self-end pb-2">
-				<a class="text-dark" href="index.html">Home</a>
+			<div class="col d-flex flex-row-reverse">
+				<div class="mt-10 sm-mt-0 col-sm-2 align-self-end pb-3" id="test34">
+					<a class="text-dark" href="index.html">Home</a>
+				</div>
+				<div class="mt-10 sm-mt-0 col-sm-2 align-self-end pb-3" id="test34">
+					<a class="text-dark" href="agencias.html">Agencias</a>
+				</div>
+				<div class="mt-10 sm-mt-0 col-sm-2 align-self-end pb-3	" id="test34">
+					<a class="text-dark" href="lineas.html">Lineas</a>
+				</div>
 			</div>
-			<div class="col col-sm-2 align-self-end pb-2">
-				<a class="text-dark" href="agencias.html">Agencias</a>
-			</div>
-			<div class="col align-self-end pb-2">
-				<a class="text-dark" href="lineas.html">Lineas</a>
-			</div>
+		</div>
+		<div class="row mw-100" >
+	      <nav class="main-nav" id="test20">
+	        <input type="checkbox" id="isChecked"/>
+	        <label for="isChecked" class="menu-btn">
+	          <i class="fa fa-bars"></i>
+	        </label>
+				<a href="index.html"><img src="logoejemplo.png" width=50px;></a>
+	          <ul class="navlinks">
+	          <li><a class="text-white" id="test20" href="index.html">Home</a></li>
+	          <li><a class="text-white" id="test20" href="agencias.html">Agencias</a></li>
+	          <li><a class="text-white" id="test20" href="lineas.html">Lineas</a></li>
+	        </ul>
+	      </nav>
 		</div>
 		</header>
 
@@ -43,7 +61,7 @@
 			</ul>
 		</div>
 	</div>
-	<div class="col">
+	<div class="col-md row-sm pt-2">
 		<p class="fw-bold text-center pt-2">Area de cobertura de la agencia</p>
 		<div class="bg-light border border-dark ms-5">
 			<div id="map1">
@@ -58,25 +76,21 @@
 <br>
 <br>
 
-<footer id="test" class="position-absolute w-100 mt-5">
-
+<footer id="test1">
 	<div class="row">
 		<div class="col ms-5 pt-1">
 			<div id="logofooter">
-				<a href="index.html"><img src="logoejemplo.png" width=50px;></a>
-				<p class="pt-4 fw-bold">Una pagina simple sobre direcciones de lineas de colectivo</p>
+				<a href="index.html"><img src="logoejemplo.png" width=50px; id="test31"></a>
+				<p class="pt-4 fw-bold" id="test32">Una pagina simple sobre direcciones de lineas de colectivo</p>
 			</div>
-      	<div id="linksfooter" >
-		      <div id="test8">
-		        <a  href="contacto.html" style="text-align: center;">Contactanos</a>
-          </div>
-	      </div>
   </div>
 		<div class="col-3 pt-3 w-25">
 			<p class="bg-secondary text-wrap border border-dark rounded fw-bold" style="width: 3rem">Datos</p>
 			<ul>
-				<li><a href="index.html#sobreelproyecto">Sobre el proyecto</a></li>
-				<li><a href="index.html#desarollo">Desarollo</a></li>
+				<li><a href="desarollo.html">Sobre el proyecto</a></li>
+				<li><a href="index.html#noticias">Noticias</a></li>
+				<li><a  href="contacto.html" style="text-align: center;">Contactanos</a>
+				</li>
 			</ul>
 		</div>
 	</div>
