--- a/public/html/contacto.html
+++ b/public/html/contacto.html
@@ -56,6 +56,9 @@
     <p>Direccion: José Manuel de Estrada 1092, B1888FXV Florencio Varela, Provincia de Buenos Aires</p>
     <p>Telefono: 54+ 11 9948-3929</p>
     <p>Mail: colectivosargentina@gmail.com</p>
+	<br>
+	<p><b>¿Tenes alguna opinion sobre el sitio?</b></p>
+	<a href="formulario.html">Mandanos un mail!</a>
 </div>
 <br>
 <footer id="test1">
