Ultimos ultimos cambios
Se cambio el diseño de la pagina

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -15,14 +15,14 @@
 				<a href="index.html"><img src="logoejemplo.png" width=50px;></a>
 			</div>
 			<div class="col d-flex flex-row-reverse">
-				<div class="mt-10 sm-mt-0 col-sm-2 align-self-end pb-3" id="test34">
-					<a class="text-dark" href="index.html">Home</a>
+				<div class="mt-10 sm-mt-0 col-sm-2 align-self-end pb-3	" id="test34">
+					<a class="text-dark" href="lineas.html">Lineas</a>
 				</div>
 				<div class="mt-10 sm-mt-0 col-sm-2 align-self-end pb-3" id="test34">
 					<a class="text-dark" href="agencias.html">Agencias</a>
 				</div>
-				<div class="mt-10 sm-mt-0 col-sm-2 align-self-end pb-3	" id="test34">
-					<a class="text-dark" href="lineas.html">Lineas</a>
+				<div class="mt-10 sm-mt-0 col-sm-2 align-self-end pb-3" id="test34">
+					<a class="text-dark" href="index.html">Home</a>
 				</div>
 			</div>
 		</div>
@@ -46,8 +46,8 @@
 	<h1 id="test9" class="pt-4">Colectivos de buenos aires</h1>
 	<p class="test9parrafo">Un sitio web de agencias de colectivo de buenos aires argentina</p>	
 </div>
-<div class="py-4 me-4 text-center">
-	<div class="row">
+<div class="py-4 text-center">
+	<div class="row" style="--bs-gutter-x: 0;">
 		<a name="noticias"></a>
 		<h1 class="text-center pb-5">Noticias</h1>
 		<ul>
@@ -56,13 +56,13 @@
 		</ul>
 	</div>
 </div>
-<div class="pt-4 me-4 text-center">
-	<div class="row">
+<div class="pt-4 text-center">
+	<div class="row" style="--bs-gutter-x: 0; display:contents;">
 		<a name="Imagenes"></a>
-		<h1 class="text-center pb-5">Imagenes</h1>
-		<img src="Imagenpreviewhome.jpg" id="imagePreview" width="50%" height="400"></img>
-		<img src="imagenpreviewhomedos.jpg" id="imagePreview" width="50%" height="400"></img>
-		<img src="imagenpreviewhometres.jpg" id="imagePreview" width="50%" height="400"></img>
+		<h1 class="text-center pb-5">Galeria</h1>
+		<img src="Imagenpreviewhome.jpg" id="imagePreview" width="200" height="500" style="border: 3px solid;" class="my-4"></img>
+		<img src="imagenpreviewhomedos.jpg" id="imagePreview" width="200" height="500" style="border: 3px solid;" class="my-4"></img>
+		<img src="imagenpreviewhometres.jpg" id="imagePreview" width="200" height="500" style="border: 3px solid;" class="my-4"></img>
 	</div>
 </div>
 <footer id="test1">
